--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "graphql": "^16.6.0",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
