--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
