add dependencies to try to deploy to heroku

--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,10 @@
     "mongoose": "^7.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
+    
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "vite": "^2.0.0"
   }
 }
