--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build",
+    "build": "cd server && npm run build && cd ../client && npm run build",
+    "seed": "cd server && npm run seed"
   },
   "author": "",
   "license": "ISC",
