--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "@heroicons/react": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "vite": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -26,7 +27,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "vite": "^4.5.0"
+    "tailwindcss": "^3.3.5"
   }
 }
