--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-    "heroku-postbuild": "cd client && npm install && npm run build",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
     "build": "cd server && npm run build && cd ../client && npm run build",
     "seed": "cd server && npm run seed"
   },
