--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,12 @@
     "react-router-dom": "^6.11.2",
     "vite": "^4.5.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "autoprefixer": "^10.4.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
