--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
-    "build": "cd server && npm run build && cd ../client && npm run build",
+    "build": "cd ../client && npm run build",
     "seed": "cd server && npm run seed"
   },
   "author": "",
