--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SESSION_SECRET=stringstringstring
-MONGODB_URI=mongodb+srv://tovalgreene:<charliepuente>@cluster0.8jcqynr.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://tovalgreene:charliepuente@cluster0.8jcqynr.mongodb.net/?retryWrites=true&w=majority
