--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
-    "mongodb": "^6.2.0"
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0"
   }
 }
